// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`An Octaves Test Suite should map - chromatic 1`] = `
Array [
  Object {
    "C-1": 0,
  },
  Object {
    "C#-1": 1,
  },
  Object {
    "D-1": 2,
  },
  Object {
    "D#-1": 3,
  },
  Object {
    "E-1": 4,
  },
  Object {
    "F-1": 5,
  },
  Object {
    "F#-1": 6,
  },
  Object {
    "G-1": 7,
  },
  Object {
    "G#-1": 8,
  },
  Object {
    "A-1": 9,
  },
  Object {
    "A#-1": 10,
  },
  Object {
    "B-1": 11,
  },
  Object {
    "C0": 12,
  },
  Object {
    "C#0": 13,
  },
  Object {
    "D0": 14,
  },
  Object {
    "D#0": 15,
  },
  Object {
    "E0": 16,
  },
  Object {
    "F0": 17,
  },
  Object {
    "F#0": 18,
  },
  Object {
    "G0": 19,
  },
  Object {
    "G#0": 20,
  },
  Object {
    "A0": 21,
  },
  Object {
    "A#0": 22,
  },
  Object {
    "B0": 23,
  },
  Object {
    "C1": 24,
  },
  Object {
    "C#1": 25,
  },
  Object {
    "D1": 26,
  },
  Object {
    "D#1": 27,
  },
  Object {
    "E1": 28,
  },
  Object {
    "F1": 29,
  },
  Object {
    "F#1": 30,
  },
  Object {
    "G1": 31,
  },
  Object {
    "G#1": 32,
  },
  Object {
    "A1": 33,
  },
  Object {
    "A#1": 34,
  },
  Object {
    "B1": 35,
  },
  Object {
    "C2": 36,
  },
  Object {
    "C#2": 37,
  },
  Object {
    "D2": 38,
  },
  Object {
    "D#2": 39,
  },
  Object {
    "E2": 40,
  },
  Object {
    "F2": 41,
  },
  Object {
    "F#2": 42,
  },
  Object {
    "G2": 43,
  },
  Object {
    "G#2": 44,
  },
  Object {
    "A2": 45,
  },
  Object {
    "A#2": 46,
  },
  Object {
    "B2": 47,
  },
  Object {
    "C3": 48,
  },
  Object {
    "C#3": 49,
  },
  Object {
    "D3": 50,
  },
  Object {
    "D#3": 51,
  },
  Object {
    "E3": 52,
  },
  Object {
    "F3": 53,
  },
  Object {
    "F#3": 54,
  },
  Object {
    "G3": 55,
  },
  Object {
    "G#3": 56,
  },
  Object {
    "A3": 57,
  },
  Object {
    "A#3": 58,
  },
  Object {
    "B3": 59,
  },
  Object {
    "C4": 60,
  },
  Object {
    "C#4": 61,
  },
  Object {
    "D4": 62,
  },
  Object {
    "D#4": 63,
  },
  Object {
    "E4": 64,
  },
  Object {
    "F4": 65,
  },
  Object {
    "F#4": 66,
  },
  Object {
    "G4": 67,
  },
  Object {
    "G#4": 68,
  },
  Object {
    "A4": 69,
  },
  Object {
    "A#4": 70,
  },
  Object {
    "B4": 71,
  },
  Object {
    "C5": 72,
  },
  Object {
    "C#5": 73,
  },
  Object {
    "D5": 74,
  },
  Object {
    "D#5": 75,
  },
  Object {
    "E5": 76,
  },
  Object {
    "F5": 77,
  },
  Object {
    "F#5": 78,
  },
  Object {
    "G5": 79,
  },
  Object {
    "G#5": 80,
  },
  Object {
    "A5": 81,
  },
  Object {
    "A#5": 82,
  },
  Object {
    "B5": 83,
  },
  Object {
    "C6": 84,
  },
  Object {
    "C#6": 85,
  },
  Object {
    "D6": 86,
  },
  Object {
    "D#6": 87,
  },
  Object {
    "E6": 88,
  },
  Object {
    "F6": 89,
  },
  Object {
    "F#6": 90,
  },
  Object {
    "G6": 91,
  },
  Object {
    "G#6": 92,
  },
  Object {
    "A6": 93,
  },
  Object {
    "A#6": 94,
  },
  Object {
    "B6": 95,
  },
  Object {
    "C7": 96,
  },
  Object {
    "C#7": 97,
  },
  Object {
    "D7": 98,
  },
  Object {
    "D#7": 99,
  },
  Object {
    "E7": 100,
  },
  Object {
    "F7": 101,
  },
  Object {
    "F#7": 102,
  },
  Object {
    "G7": 103,
  },
  Object {
    "G#7": 104,
  },
  Object {
    "A7": 105,
  },
  Object {
    "A#7": 106,
  },
  Object {
    "B7": 107,
  },
  Object {
    "C8": 108,
  },
  Object {
    "C#8": 109,
  },
  Object {
    "D8": 110,
  },
  Object {
    "D#8": 111,
  },
  Object {
    "E8": 112,
  },
  Object {
    "F8": 113,
  },
  Object {
    "F#8": 114,
  },
  Object {
    "G8": 115,
  },
  Object {
    "G#8": 116,
  },
  Object {
    "A8": 117,
  },
  Object {
    "A#8": 118,
  },
  Object {
    "B8": 119,
  },
  Object {
    "C9": 120,
  },
  Object {
    "C#9": 121,
  },
  Object {
    "D9": 122,
  },
  Object {
    "D#9": 123,
  },
  Object {
    "E9": 124,
  },
  Object {
    "F9": 125,
  },
  Object {
    "F#9": 126,
  },
  Object {
    "G9": 127,
  },
]
`;

exports[`An Octaves Test Suite should map - flat 1`] = `
Array [
  Note {
    "_accident": "b",
    "_enharmonic": "G#",
    "_freq": 415.3046975799451,
    "_isFlat": false,
    "_isSharp": false,
    "_midi": 68,
    "_next": "A",
    "_note": "Ab",
    "_octave": 4,
    "_prev": "G",
  },
  Note {
    "_accident": "b",
    "_enharmonic": "A#",
    "_freq": 466.1637615180899,
    "_isFlat": false,
    "_isSharp": false,
    "_midi": 70,
    "_next": "B",
    "_note": "Bb",
    "_octave": 4,
    "_prev": "A",
  },
  Note {
    "_enharmonic": null,
    "_freq": 523.2511306011972,
    "_isFlat": false,
    "_isSharp": false,
    "_midi": 72,
    "_next": "C#",
    "_note": "C",
    "_octave": 5,
    "_prev": "B",
  },
  Note {
    "_accident": "b",
    "_enharmonic": "C#",
    "_freq": 554.3652619537442,
    "_isFlat": false,
    "_isSharp": false,
    "_midi": 73,
    "_next": "D",
    "_note": "Db",
    "_octave": 5,
    "_prev": "C",
  },
  Note {
    "_accident": "b",
    "_enharmonic": "D#",
    "_freq": 622.2539674441618,
    "_isFlat": false,
    "_isSharp": false,
    "_midi": 75,
    "_next": "E",
    "_note": "Eb",
    "_octave": 5,
    "_prev": "D",
  },
  Note {
    "_enharmonic": null,
    "_freq": 698.4564628660078,
    "_isFlat": false,
    "_isSharp": false,
    "_midi": 77,
    "_next": "F#",
    "_note": "F",
    "_octave": 5,
    "_prev": "E",
  },
  Note {
    "_enharmonic": null,
    "_freq": 783.9908719634985,
    "_isFlat": false,
    "_isSharp": false,
    "_midi": 79,
    "_next": "G#",
    "_note": "G",
    "_octave": 5,
    "_prev": "F#",
  },
  Note {
    "_accident": "b",
    "_enharmonic": "G#",
    "_freq": 830.6093951598903,
    "_isFlat": false,
    "_isSharp": false,
    "_midi": 80,
    "_next": "A",
    "_note": "Ab",
    "_octave": 5,
    "_prev": "G",
  },
  Note {
    "_accident": "b",
    "_enharmonic": "A#",
    "_freq": 932.3275230361799,
    "_isFlat": false,
    "_isSharp": false,
    "_midi": 82,
    "_next": "B",
    "_note": "Bb",
    "_octave": 5,
    "_prev": "A",
  },
  Note {
    "_enharmonic": null,
    "_freq": 1046.5022612023945,
    "_isFlat": false,
    "_isSharp": false,
    "_midi": 84,
    "_next": "C#",
    "_note": "C",
    "_octave": 6,
    "_prev": "B",
  },
  Note {
    "_accident": "b",
    "_enharmonic": "C#",
    "_freq": 1108.7305239074883,
    "_isFlat": false,
    "_isSharp": false,
    "_midi": 85,
    "_next": "D",
    "_note": "Db",
    "_octave": 6,
    "_prev": "C",
  },
  Note {
    "_accident": "b",
    "_enharmonic": "D#",
    "_freq": 1244.5079348883237,
    "_isFlat": false,
    "_isSharp": false,
    "_midi": 87,
    "_next": "E",
    "_note": "Eb",
    "_octave": 6,
    "_prev": "D",
  },
  Note {
    "_enharmonic": null,
    "_freq": 1396.9129257320155,
    "_isFlat": false,
    "_isSharp": false,
    "_midi": 89,
    "_next": "F#",
    "_note": "F",
    "_octave": 6,
    "_prev": "E",
  },
  Note {
    "_enharmonic": null,
    "_freq": 1567.981743926997,
    "_isFlat": false,
    "_isSharp": false,
    "_midi": 91,
    "_next": "G#",
    "_note": "G",
    "_octave": 6,
    "_prev": "F#",
  },
  Note {
    "_accident": "b",
    "_enharmonic": "G#",
    "_freq": 1661.2187903197805,
    "_isFlat": false,
    "_isSharp": false,
    "_midi": 92,
    "_next": "A",
    "_note": "Ab",
    "_octave": 6,
    "_prev": "G",
  },
  Note {
    "_accident": "b",
    "_enharmonic": "A#",
    "_freq": 1864.6550460723597,
    "_isFlat": false,
    "_isSharp": false,
    "_midi": 94,
    "_next": "B",
    "_note": "Bb",
    "_octave": 6,
    "_prev": "A",
  },
  Note {
    "_enharmonic": null,
    "_freq": 2093.004522404789,
    "_isFlat": false,
    "_isSharp": false,
    "_midi": 96,
    "_next": "C#",
    "_note": "C",
    "_octave": 7,
    "_prev": "B",
  },
  Note {
    "_accident": "b",
    "_enharmonic": "C#",
    "_freq": 2217.4610478149766,
    "_isFlat": false,
    "_isSharp": false,
    "_midi": 97,
    "_next": "D",
    "_note": "Db",
    "_octave": 7,
    "_prev": "C",
  },
  Note {
    "_accident": "b",
    "_enharmonic": "D#",
    "_freq": 2489.0158697766474,
    "_isFlat": false,
    "_isSharp": false,
    "_midi": 99,
    "_next": "E",
    "_note": "Eb",
    "_octave": 7,
    "_prev": "D",
  },
  Note {
    "_enharmonic": null,
    "_freq": 2793.825851464031,
    "_isFlat": false,
    "_isSharp": false,
    "_midi": 101,
    "_next": "F#",
    "_note": "F",
    "_octave": 7,
    "_prev": "E",
  },
  Note {
    "_enharmonic": null,
    "_freq": 3135.9634878539946,
    "_isFlat": false,
    "_isSharp": false,
    "_midi": 103,
    "_next": "G#",
    "_note": "G",
    "_octave": 7,
    "_prev": "F#",
  },
  Note {
    "_accident": "b",
    "_enharmonic": "G#",
    "_freq": 3322.437580639561,
    "_isFlat": false,
    "_isSharp": false,
    "_midi": 104,
    "_next": "A",
    "_note": "Ab",
    "_octave": 7,
    "_prev": "G",
  },
  Note {
    "_accident": "b",
    "_enharmonic": "A#",
    "_freq": 3729.3100921447194,
    "_isFlat": false,
    "_isSharp": false,
    "_midi": 106,
    "_next": "B",
    "_note": "Bb",
    "_octave": 7,
    "_prev": "A",
  },
  Note {
    "_enharmonic": null,
    "_freq": 4186.009044809578,
    "_isFlat": false,
    "_isSharp": false,
    "_midi": 108,
    "_next": "C#",
    "_note": "C",
    "_octave": 8,
    "_prev": "B",
  },
  Note {
    "_accident": "b",
    "_enharmonic": "C#",
    "_freq": 4434.922095629953,
    "_isFlat": false,
    "_isSharp": false,
    "_midi": 109,
    "_next": "D",
    "_note": "Db",
    "_octave": 8,
    "_prev": "C",
  },
  Note {
    "_accident": "b",
    "_enharmonic": "D#",
    "_freq": 4978.031739553295,
    "_isFlat": false,
    "_isSharp": false,
    "_midi": 111,
    "_next": "E",
    "_note": "Eb",
    "_octave": 8,
    "_prev": "D",
  },
  Note {
    "_enharmonic": null,
    "_freq": 5587.651702928062,
    "_isFlat": false,
    "_isSharp": false,
    "_midi": 113,
    "_next": "F#",
    "_note": "F",
    "_octave": 8,
    "_prev": "E",
  },
  Note {
    "_enharmonic": null,
    "_freq": 6271.926975707989,
    "_isFlat": false,
    "_isSharp": false,
    "_midi": 115,
    "_next": "G#",
    "_note": "G",
    "_octave": 8,
    "_prev": "F#",
  },
  Note {
    "_accident": "b",
    "_enharmonic": "G#",
    "_freq": 6644.875161279122,
    "_isFlat": false,
    "_isSharp": false,
    "_midi": 116,
    "_next": "A",
    "_note": "Ab",
    "_octave": 8,
    "_prev": "G",
  },
]
`;

exports[`An Octaves Test Suite should map - major with flats 1`] = `
Array [
  Note {
    "_enharmonic": null,
    "_freq": 10.913382232281373,
    "_isFlat": false,
    "_isSharp": false,
    "_midi": 5,
    "_next": "F#",
    "_note": "F",
    "_octave": -1,
    "_prev": "E",
  },
  Note {
    "_enharmonic": null,
    "_freq": 12.249857374429663,
    "_isFlat": false,
    "_isSharp": false,
    "_midi": 7,
    "_next": "G#",
    "_note": "G",
    "_octave": -1,
    "_prev": "F#",
  },
  Note {
    "_enharmonic": null,
    "_freq": 13.75,
    "_isFlat": false,
    "_isSharp": false,
    "_midi": 9,
    "_next": "A#",
    "_note": "A",
    "_octave": -1,
    "_prev": "G#",
  },
  Note {
    "_accident": "b",
    "_enharmonic": "A#",
    "_freq": 14.567617547440307,
    "_isFlat": false,
    "_isSharp": false,
    "_midi": 10,
    "_next": "B",
    "_note": "Bb",
    "_octave": -1,
    "_prev": "A",
  },
  Note {
    "_enharmonic": null,
    "_freq": 16.351597831287414,
    "_isFlat": false,
    "_isSharp": false,
    "_midi": 12,
    "_next": "C#",
    "_note": "C",
    "_octave": 0,
    "_prev": "B",
  },
  Note {
    "_enharmonic": null,
    "_freq": 18.354047994837977,
    "_isFlat": false,
    "_isSharp": false,
    "_midi": 14,
    "_next": "D#",
    "_note": "D",
    "_octave": 0,
    "_prev": "C#",
  },
  Note {
    "_enharmonic": null,
    "_freq": 20.601722307054366,
    "_isFlat": false,
    "_isSharp": false,
    "_midi": 16,
    "_next": "F",
    "_note": "E",
    "_octave": 0,
    "_prev": "D#",
  },
  Note {
    "_enharmonic": null,
    "_freq": 21.826764464562746,
    "_isFlat": false,
    "_isSharp": false,
    "_midi": 17,
    "_next": "F#",
    "_note": "F",
    "_octave": 0,
    "_prev": "E",
  },
]
`;

exports[`An Octaves Test Suite should map - natural 1`] = `
Array [
  Note {
    "_enharmonic": null,
    "_freq": 8.175798915643707,
    "_isFlat": false,
    "_isSharp": false,
    "_midi": 0,
    "_next": "C#",
    "_note": "C",
    "_octave": -1,
    "_prev": "B",
  },
  Note {
    "_enharmonic": null,
    "_freq": 9.177023997418988,
    "_isFlat": false,
    "_isSharp": false,
    "_midi": 2,
    "_next": "D#",
    "_note": "D",
    "_octave": -1,
    "_prev": "C#",
  },
  Note {
    "_enharmonic": null,
    "_freq": 10.300861153527183,
    "_isFlat": false,
    "_isSharp": false,
    "_midi": 4,
    "_next": "F",
    "_note": "E",
    "_octave": -1,
    "_prev": "D#",
  },
  Note {
    "_enharmonic": null,
    "_freq": 10.913382232281373,
    "_isFlat": false,
    "_isSharp": false,
    "_midi": 5,
    "_next": "F#",
    "_note": "F",
    "_octave": -1,
    "_prev": "E",
  },
  Note {
    "_enharmonic": null,
    "_freq": 12.249857374429663,
    "_isFlat": false,
    "_isSharp": false,
    "_midi": 7,
    "_next": "G#",
    "_note": "G",
    "_octave": -1,
    "_prev": "F#",
  },
  Note {
    "_enharmonic": null,
    "_freq": 13.75,
    "_isFlat": false,
    "_isSharp": false,
    "_midi": 9,
    "_next": "A#",
    "_note": "A",
    "_octave": -1,
    "_prev": "G#",
  },
  Note {
    "_enharmonic": null,
    "_freq": 15.433853164253883,
    "_isFlat": false,
    "_isSharp": false,
    "_midi": 11,
    "_next": "C",
    "_note": "B",
    "_octave": -1,
    "_prev": "A#",
  },
  Note {
    "_enharmonic": null,
    "_freq": 16.351597831287414,
    "_isFlat": false,
    "_isSharp": false,
    "_midi": 12,
    "_next": "C#",
    "_note": "C",
    "_octave": 0,
    "_prev": "B",
  },
  Note {
    "_enharmonic": null,
    "_freq": 18.354047994837977,
    "_isFlat": false,
    "_isSharp": false,
    "_midi": 14,
    "_next": "D#",
    "_note": "D",
    "_octave": 0,
    "_prev": "C#",
  },
  Note {
    "_enharmonic": null,
    "_freq": 20.601722307054366,
    "_isFlat": false,
    "_isSharp": false,
    "_midi": 16,
    "_next": "F",
    "_note": "E",
    "_octave": 0,
    "_prev": "D#",
  },
  Note {
    "_enharmonic": null,
    "_freq": 21.826764464562746,
    "_isFlat": false,
    "_isSharp": false,
    "_midi": 17,
    "_next": "F#",
    "_note": "F",
    "_octave": 0,
    "_prev": "E",
  },
  Note {
    "_enharmonic": null,
    "_freq": 24.499714748859326,
    "_isFlat": false,
    "_isSharp": false,
    "_midi": 19,
    "_next": "G#",
    "_note": "G",
    "_octave": 0,
    "_prev": "F#",
  },
  Note {
    "_enharmonic": null,
    "_freq": 27.5,
    "_isFlat": false,
    "_isSharp": false,
    "_midi": 21,
    "_next": "A#",
    "_note": "A",
    "_octave": 0,
    "_prev": "G#",
  },
  Note {
    "_enharmonic": null,
    "_freq": 30.86770632850775,
    "_isFlat": false,
    "_isSharp": false,
    "_midi": 23,
    "_next": "C",
    "_note": "B",
    "_octave": 0,
    "_prev": "A#",
  },
  Note {
    "_enharmonic": null,
    "_freq": 32.70319566257483,
    "_isFlat": false,
    "_isSharp": false,
    "_midi": 24,
    "_next": "C#",
    "_note": "C",
    "_octave": 1,
    "_prev": "B",
  },
  Note {
    "_enharmonic": null,
    "_freq": 36.70809598967594,
    "_isFlat": false,
    "_isSharp": false,
    "_midi": 26,
    "_next": "D#",
    "_note": "D",
    "_octave": 1,
    "_prev": "C#",
  },
  Note {
    "_enharmonic": null,
    "_freq": 41.20344461410875,
    "_isFlat": false,
    "_isSharp": false,
    "_midi": 28,
    "_next": "F",
    "_note": "E",
    "_octave": 1,
    "_prev": "D#",
  },
  Note {
    "_enharmonic": null,
    "_freq": 43.653528929125486,
    "_isFlat": false,
    "_isSharp": false,
    "_midi": 29,
    "_next": "F#",
    "_note": "F",
    "_octave": 1,
    "_prev": "E",
  },
  Note {
    "_enharmonic": null,
    "_freq": 48.999429497718666,
    "_isFlat": false,
    "_isSharp": false,
    "_midi": 31,
    "_next": "G#",
    "_note": "G",
    "_octave": 1,
    "_prev": "F#",
  },
  Note {
    "_enharmonic": null,
    "_freq": 55,
    "_isFlat": false,
    "_isSharp": false,
    "_midi": 33,
    "_next": "A#",
    "_note": "A",
    "_octave": 1,
    "_prev": "G#",
  },
  Note {
    "_enharmonic": null,
    "_freq": 61.7354126570155,
    "_isFlat": false,
    "_isSharp": false,
    "_midi": 35,
    "_next": "C",
    "_note": "B",
    "_octave": 1,
    "_prev": "A#",
  },
  Note {
    "_enharmonic": null,
    "_freq": 65.40639132514966,
    "_isFlat": false,
    "_isSharp": false,
    "_midi": 36,
    "_next": "C#",
    "_note": "C",
    "_octave": 2,
    "_prev": "B",
  },
  Note {
    "_enharmonic": null,
    "_freq": 73.41619197935188,
    "_isFlat": false,
    "_isSharp": false,
    "_midi": 38,
    "_next": "D#",
    "_note": "D",
    "_octave": 2,
    "_prev": "C#",
  },
  Note {
    "_enharmonic": null,
    "_freq": 82.4068892282175,
    "_isFlat": false,
    "_isSharp": false,
    "_midi": 40,
    "_next": "F",
    "_note": "E",
    "_octave": 2,
    "_prev": "D#",
  },
  Note {
    "_enharmonic": null,
    "_freq": 87.30705785825097,
    "_isFlat": false,
    "_isSharp": false,
    "_midi": 41,
    "_next": "F#",
    "_note": "F",
    "_octave": 2,
    "_prev": "E",
  },
  Note {
    "_enharmonic": null,
    "_freq": 97.99885899543733,
    "_isFlat": false,
    "_isSharp": false,
    "_midi": 43,
    "_next": "G#",
    "_note": "G",
    "_octave": 2,
    "_prev": "F#",
  },
  Note {
    "_enharmonic": null,
    "_freq": 110,
    "_isFlat": false,
    "_isSharp": false,
    "_midi": 45,
    "_next": "A#",
    "_note": "A",
    "_octave": 2,
    "_prev": "G#",
  },
  Note {
    "_enharmonic": null,
    "_freq": 123.47082531403103,
    "_isFlat": false,
    "_isSharp": false,
    "_midi": 47,
    "_next": "C",
    "_note": "B",
    "_octave": 2,
    "_prev": "A#",
  },
  Note {
    "_enharmonic": null,
    "_freq": 130.8127826502993,
    "_isFlat": false,
    "_isSharp": false,
    "_midi": 48,
    "_next": "C#",
    "_note": "C",
    "_octave": 3,
    "_prev": "B",
  },
  Note {
    "_enharmonic": null,
    "_freq": 146.8323839587038,
    "_isFlat": false,
    "_isSharp": false,
    "_midi": 50,
    "_next": "D#",
    "_note": "D",
    "_octave": 3,
    "_prev": "C#",
  },
  Note {
    "_enharmonic": null,
    "_freq": 164.81377845643496,
    "_isFlat": false,
    "_isSharp": false,
    "_midi": 52,
    "_next": "F",
    "_note": "E",
    "_octave": 3,
    "_prev": "D#",
  },
  Note {
    "_enharmonic": null,
    "_freq": 174.61411571650194,
    "_isFlat": false,
    "_isSharp": false,
    "_midi": 53,
    "_next": "F#",
    "_note": "F",
    "_octave": 3,
    "_prev": "E",
  },
  Note {
    "_enharmonic": null,
    "_freq": 195.99771799087463,
    "_isFlat": false,
    "_isSharp": false,
    "_midi": 55,
    "_next": "G#",
    "_note": "G",
    "_octave": 3,
    "_prev": "F#",
  },
  Note {
    "_enharmonic": null,
    "_freq": 220,
    "_isFlat": false,
    "_isSharp": false,
    "_midi": 57,
    "_next": "A#",
    "_note": "A",
    "_octave": 3,
    "_prev": "G#",
  },
  Note {
    "_enharmonic": null,
    "_freq": 246.94165062806206,
    "_isFlat": false,
    "_isSharp": false,
    "_midi": 59,
    "_next": "C",
    "_note": "B",
    "_octave": 3,
    "_prev": "A#",
  },
  Note {
    "_enharmonic": null,
    "_freq": 261.6255653005986,
    "_isFlat": false,
    "_isSharp": false,
    "_midi": 60,
    "_next": "C#",
    "_note": "C",
    "_octave": 4,
    "_prev": "B",
  },
  Note {
    "_enharmonic": null,
    "_freq": 293.6647679174076,
    "_isFlat": false,
    "_isSharp": false,
    "_midi": 62,
    "_next": "D#",
    "_note": "D",
    "_octave": 4,
    "_prev": "C#",
  },
  Note {
    "_enharmonic": null,
    "_freq": 329.6275569128699,
    "_isFlat": false,
    "_isSharp": false,
    "_midi": 64,
    "_next": "F",
    "_note": "E",
    "_octave": 4,
    "_prev": "D#",
  },
  Note {
    "_enharmonic": null,
    "_freq": 349.2282314330039,
    "_isFlat": false,
    "_isSharp": false,
    "_midi": 65,
    "_next": "F#",
    "_note": "F",
    "_octave": 4,
    "_prev": "E",
  },
  Note {
    "_enharmonic": null,
    "_freq": 391.99543598174927,
    "_isFlat": false,
    "_isSharp": false,
    "_midi": 67,
    "_next": "G#",
    "_note": "G",
    "_octave": 4,
    "_prev": "F#",
  },
  Note {
    "_enharmonic": null,
    "_freq": 440,
    "_isFlat": false,
    "_isSharp": false,
    "_midi": 69,
    "_next": "A#",
    "_note": "A",
    "_octave": 4,
    "_prev": "G#",
  },
  Note {
    "_enharmonic": null,
    "_freq": 493.8833012561241,
    "_isFlat": false,
    "_isSharp": false,
    "_midi": 71,
    "_next": "C",
    "_note": "B",
    "_octave": 4,
    "_prev": "A#",
  },
  Note {
    "_enharmonic": null,
    "_freq": 523.2511306011972,
    "_isFlat": false,
    "_isSharp": false,
    "_midi": 72,
    "_next": "C#",
    "_note": "C",
    "_octave": 5,
    "_prev": "B",
  },
  Note {
    "_enharmonic": null,
    "_freq": 587.3295358348151,
    "_isFlat": false,
    "_isSharp": false,
    "_midi": 74,
    "_next": "D#",
    "_note": "D",
    "_octave": 5,
    "_prev": "C#",
  },
  Note {
    "_enharmonic": null,
    "_freq": 659.2551138257398,
    "_isFlat": false,
    "_isSharp": false,
    "_midi": 76,
    "_next": "F",
    "_note": "E",
    "_octave": 5,
    "_prev": "D#",
  },
  Note {
    "_enharmonic": null,
    "_freq": 698.4564628660078,
    "_isFlat": false,
    "_isSharp": false,
    "_midi": 77,
    "_next": "F#",
    "_note": "F",
    "_octave": 5,
    "_prev": "E",
  },
  Note {
    "_enharmonic": null,
    "_freq": 783.9908719634985,
    "_isFlat": false,
    "_isSharp": false,
    "_midi": 79,
    "_next": "G#",
    "_note": "G",
    "_octave": 5,
    "_prev": "F#",
  },
  Note {
    "_enharmonic": null,
    "_freq": 880,
    "_isFlat": false,
    "_isSharp": false,
    "_midi": 81,
    "_next": "A#",
    "_note": "A",
    "_octave": 5,
    "_prev": "G#",
  },
  Note {
    "_enharmonic": null,
    "_freq": 987.7666025122483,
    "_isFlat": false,
    "_isSharp": false,
    "_midi": 83,
    "_next": "C",
    "_note": "B",
    "_octave": 5,
    "_prev": "A#",
  },
  Note {
    "_enharmonic": null,
    "_freq": 1046.5022612023945,
    "_isFlat": false,
    "_isSharp": false,
    "_midi": 84,
    "_next": "C#",
    "_note": "C",
    "_octave": 6,
    "_prev": "B",
  },
  Note {
    "_enharmonic": null,
    "_freq": 1174.6590716696303,
    "_isFlat": false,
    "_isSharp": false,
    "_midi": 86,
    "_next": "D#",
    "_note": "D",
    "_octave": 6,
    "_prev": "C#",
  },
  Note {
    "_enharmonic": null,
    "_freq": 1318.5102276514797,
    "_isFlat": false,
    "_isSharp": false,
    "_midi": 88,
    "_next": "F",
    "_note": "E",
    "_octave": 6,
    "_prev": "D#",
  },
  Note {
    "_enharmonic": null,
    "_freq": 1396.9129257320155,
    "_isFlat": false,
    "_isSharp": false,
    "_midi": 89,
    "_next": "F#",
    "_note": "F",
    "_octave": 6,
    "_prev": "E",
  },
  Note {
    "_enharmonic": null,
    "_freq": 1567.981743926997,
    "_isFlat": false,
    "_isSharp": false,
    "_midi": 91,
    "_next": "G#",
    "_note": "G",
    "_octave": 6,
    "_prev": "F#",
  },
  Note {
    "_enharmonic": null,
    "_freq": 1760,
    "_isFlat": false,
    "_isSharp": false,
    "_midi": 93,
    "_next": "A#",
    "_note": "A",
    "_octave": 6,
    "_prev": "G#",
  },
  Note {
    "_enharmonic": null,
    "_freq": 1975.533205024496,
    "_isFlat": false,
    "_isSharp": false,
    "_midi": 95,
    "_next": "C",
    "_note": "B",
    "_octave": 6,
    "_prev": "A#",
  },
  Note {
    "_enharmonic": null,
    "_freq": 2093.004522404789,
    "_isFlat": false,
    "_isSharp": false,
    "_midi": 96,
    "_next": "C#",
    "_note": "C",
    "_octave": 7,
    "_prev": "B",
  },
  Note {
    "_enharmonic": null,
    "_freq": 2349.31814333926,
    "_isFlat": false,
    "_isSharp": false,
    "_midi": 98,
    "_next": "D#",
    "_note": "D",
    "_octave": 7,
    "_prev": "C#",
  },
  Note {
    "_enharmonic": null,
    "_freq": 2637.02045530296,
    "_isFlat": false,
    "_isSharp": false,
    "_midi": 100,
    "_next": "F",
    "_note": "E",
    "_octave": 7,
    "_prev": "D#",
  },
  Note {
    "_enharmonic": null,
    "_freq": 2793.825851464031,
    "_isFlat": false,
    "_isSharp": false,
    "_midi": 101,
    "_next": "F#",
    "_note": "F",
    "_octave": 7,
    "_prev": "E",
  },
  Note {
    "_enharmonic": null,
    "_freq": 3135.9634878539946,
    "_isFlat": false,
    "_isSharp": false,
    "_midi": 103,
    "_next": "G#",
    "_note": "G",
    "_octave": 7,
    "_prev": "F#",
  },
  Note {
    "_enharmonic": null,
    "_freq": 3520,
    "_isFlat": false,
    "_isSharp": false,
    "_midi": 105,
    "_next": "A#",
    "_note": "A",
    "_octave": 7,
    "_prev": "G#",
  },
  Note {
    "_enharmonic": null,
    "_freq": 3951.066410048992,
    "_isFlat": false,
    "_isSharp": false,
    "_midi": 107,
    "_next": "C",
    "_note": "B",
    "_octave": 7,
    "_prev": "A#",
  },
  Note {
    "_enharmonic": null,
    "_freq": 4186.009044809578,
    "_isFlat": false,
    "_isSharp": false,
    "_midi": 108,
    "_next": "C#",
    "_note": "C",
    "_octave": 8,
    "_prev": "B",
  },
  Note {
    "_enharmonic": null,
    "_freq": 4698.63628667852,
    "_isFlat": false,
    "_isSharp": false,
    "_midi": 110,
    "_next": "D#",
    "_note": "D",
    "_octave": 8,
    "_prev": "C#",
  },
  Note {
    "_enharmonic": null,
    "_freq": 5274.04091060592,
    "_isFlat": false,
    "_isSharp": false,
    "_midi": 112,
    "_next": "F",
    "_note": "E",
    "_octave": 8,
    "_prev": "D#",
  },
  Note {
    "_enharmonic": null,
    "_freq": 5587.651702928062,
    "_isFlat": false,
    "_isSharp": false,
    "_midi": 113,
    "_next": "F#",
    "_note": "F",
    "_octave": 8,
    "_prev": "E",
  },
  Note {
    "_enharmonic": null,
    "_freq": 6271.926975707989,
    "_isFlat": false,
    "_isSharp": false,
    "_midi": 115,
    "_next": "G#",
    "_note": "G",
    "_octave": 8,
    "_prev": "F#",
  },
  Note {
    "_enharmonic": null,
    "_freq": 7040,
    "_isFlat": false,
    "_isSharp": false,
    "_midi": 117,
    "_next": "A#",
    "_note": "A",
    "_octave": 8,
    "_prev": "G#",
  },
  Note {
    "_enharmonic": null,
    "_freq": 7902.132820097988,
    "_isFlat": false,
    "_isSharp": false,
    "_midi": 119,
    "_next": "C",
    "_note": "B",
    "_octave": 8,
    "_prev": "A#",
  },
  Note {
    "_enharmonic": null,
    "_freq": 8372.018089619156,
    "_isFlat": false,
    "_isSharp": false,
    "_midi": 120,
    "_next": "C#",
    "_note": "C",
    "_octave": 9,
    "_prev": "B",
  },
  Note {
    "_enharmonic": null,
    "_freq": 9397.272573357044,
    "_isFlat": false,
    "_isSharp": false,
    "_midi": 122,
    "_next": "D#",
    "_note": "D",
    "_octave": 9,
    "_prev": "C#",
  },
  Note {
    "_enharmonic": null,
    "_freq": 10548.081821211836,
    "_isFlat": false,
    "_isSharp": false,
    "_midi": 124,
    "_next": "F",
    "_note": "E",
    "_octave": 9,
    "_prev": "D#",
  },
  Note {
    "_enharmonic": null,
    "_freq": 11175.303405856126,
    "_isFlat": false,
    "_isSharp": false,
    "_midi": 125,
    "_next": "F#",
    "_note": "F",
    "_octave": 9,
    "_prev": "E",
  },
  Note {
    "_enharmonic": null,
    "_freq": 12543.853951415975,
    "_isFlat": false,
    "_isSharp": false,
    "_midi": 127,
    "_next": "G#",
    "_note": "G",
    "_octave": 9,
    "_prev": "F#",
  },
]
`;

exports[`An Octaves Test Suite should map - pentatonic 1`] = `
Array [
  Note {
    "_accident": "b",
    "_enharmonic": "D#",
    "_freq": 9.722718241315029,
    "_isFlat": false,
    "_isSharp": false,
    "_midi": 3,
    "_next": "E",
    "_note": "Eb",
    "_octave": -1,
    "_prev": "D",
  },
  Note {
    "_enharmonic": null,
    "_freq": 10.913382232281373,
    "_isFlat": false,
    "_isSharp": false,
    "_midi": 5,
    "_next": "F#",
    "_note": "F",
    "_octave": -1,
    "_prev": "E",
  },
  Note {
    "_enharmonic": null,
    "_freq": 12.249857374429663,
    "_isFlat": false,
    "_isSharp": false,
    "_midi": 7,
    "_next": "G#",
    "_note": "G",
    "_octave": -1,
    "_prev": "F#",
  },
  Note {
    "_accident": "b",
    "_enharmonic": "A#",
    "_freq": 14.567617547440307,
    "_isFlat": false,
    "_isSharp": false,
    "_midi": 10,
    "_next": "B",
    "_note": "Bb",
    "_octave": -1,
    "_prev": "A",
  },
  Note {
    "_enharmonic": null,
    "_freq": 16.351597831287414,
    "_isFlat": false,
    "_isSharp": false,
    "_midi": 12,
    "_next": "C#",
    "_note": "C",
    "_octave": 0,
    "_prev": "B",
  },
  Note {
    "_accident": "b",
    "_enharmonic": "D#",
    "_freq": 19.445436482630058,
    "_isFlat": false,
    "_isSharp": false,
    "_midi": 15,
    "_next": "E",
    "_note": "Eb",
    "_octave": 0,
    "_prev": "D",
  },
]
`;

exports[`An Octaves Test Suite should map - sharp 1`] = `
Array [
  Note {
    "_enharmonic": null,
    "_freq": 164.81377845643496,
    "_isFlat": false,
    "_isSharp": false,
    "_midi": 52,
    "_next": "F",
    "_note": "E",
    "_octave": 3,
    "_prev": "D#",
  },
  Note {
    "_accident": "#",
    "_enharmonic": "Gb",
    "_freq": 184.9972113558172,
    "_isFlat": false,
    "_isSharp": false,
    "_midi": 54,
    "_next": "G",
    "_note": "F#",
    "_octave": 3,
    "_prev": "F",
  },
  Note {
    "_accident": "#",
    "_enharmonic": "Ab",
    "_freq": 207.65234878997256,
    "_isFlat": false,
    "_isSharp": false,
    "_midi": 56,
    "_next": "A",
    "_note": "G#",
    "_octave": 3,
    "_prev": "G",
  },
  Note {
    "_enharmonic": null,
    "_freq": 220,
    "_isFlat": false,
    "_isSharp": false,
    "_midi": 57,
    "_next": "A#",
    "_note": "A",
    "_octave": 3,
    "_prev": "G#",
  },
  Note {
    "_enharmonic": null,
    "_freq": 246.94165062806206,
    "_isFlat": false,
    "_isSharp": false,
    "_midi": 59,
    "_next": "C",
    "_note": "B",
    "_octave": 3,
    "_prev": "A#",
  },
  Note {
    "_accident": "#",
    "_enharmonic": "Db",
    "_freq": 277.1826309768721,
    "_isFlat": false,
    "_isSharp": false,
    "_midi": 61,
    "_next": "D",
    "_note": "C#",
    "_octave": 4,
    "_prev": "C",
  },
  Note {
    "_accident": "#",
    "_enharmonic": "Eb",
    "_freq": 311.1269837220809,
    "_isFlat": false,
    "_isSharp": false,
    "_midi": 63,
    "_next": "E",
    "_note": "D#",
    "_octave": 4,
    "_prev": "D",
  },
  Note {
    "_enharmonic": null,
    "_freq": 329.6275569128699,
    "_isFlat": false,
    "_isSharp": false,
    "_midi": 64,
    "_next": "F",
    "_note": "E",
    "_octave": 4,
    "_prev": "D#",
  },
  Note {
    "_accident": "#",
    "_enharmonic": "Gb",
    "_freq": 369.9944227116344,
    "_isFlat": false,
    "_isSharp": false,
    "_midi": 66,
    "_next": "G",
    "_note": "F#",
    "_octave": 4,
    "_prev": "F",
  },
  Note {
    "_accident": "#",
    "_enharmonic": "Ab",
    "_freq": 415.3046975799451,
    "_isFlat": false,
    "_isSharp": false,
    "_midi": 68,
    "_next": "A",
    "_note": "G#",
    "_octave": 4,
    "_prev": "G",
  },
  Note {
    "_enharmonic": null,
    "_freq": 440,
    "_isFlat": false,
    "_isSharp": false,
    "_midi": 69,
    "_next": "A#",
    "_note": "A",
    "_octave": 4,
    "_prev": "G#",
  },
  Note {
    "_enharmonic": null,
    "_freq": 493.8833012561241,
    "_isFlat": false,
    "_isSharp": false,
    "_midi": 71,
    "_next": "C",
    "_note": "B",
    "_octave": 4,
    "_prev": "A#",
  },
  Note {
    "_accident": "#",
    "_enharmonic": "Db",
    "_freq": 554.3652619537442,
    "_isFlat": false,
    "_isSharp": false,
    "_midi": 73,
    "_next": "D",
    "_note": "C#",
    "_octave": 5,
    "_prev": "C",
  },
  Note {
    "_accident": "#",
    "_enharmonic": "Eb",
    "_freq": 622.2539674441618,
    "_isFlat": false,
    "_isSharp": false,
    "_midi": 75,
    "_next": "E",
    "_note": "D#",
    "_octave": 5,
    "_prev": "D",
  },
  Note {
    "_enharmonic": null,
    "_freq": 659.2551138257398,
    "_isFlat": false,
    "_isSharp": false,
    "_midi": 76,
    "_next": "F",
    "_note": "E",
    "_octave": 5,
    "_prev": "D#",
  },
]
`;

exports[`An Octaves Test Suite should map 9m chord 1`] = `
Array [
  Note {
    "_accident": "b",
    "_enharmonic": "G#",
    "_freq": 415.3046975799451,
    "_isFlat": false,
    "_isSharp": false,
    "_midi": 68,
    "_next": "A",
    "_note": "Ab",
    "_octave": 4,
    "_prev": "G",
  },
  Note {
    "_enharmonic": null,
    "_freq": 493.8833012561241,
    "_isFlat": false,
    "_isSharp": false,
    "_midi": 71,
    "_next": "C",
    "_note": "B",
    "_octave": 4,
    "_prev": "A#",
  },
  Note {
    "_accident": "b",
    "_enharmonic": "D#",
    "_freq": 622.2539674441618,
    "_isFlat": false,
    "_isSharp": false,
    "_midi": 75,
    "_next": "E",
    "_note": "Eb",
    "_octave": 5,
    "_prev": "D",
  },
  Note {
    "_accident": "b",
    "_enharmonic": "F#",
    "_freq": 739.9888454232688,
    "_isFlat": false,
    "_isSharp": false,
    "_midi": 78,
    "_next": "G",
    "_note": "Gb",
    "_octave": 5,
    "_prev": "F",
  },
  Note {
    "_accident": "b",
    "_enharmonic": "A#",
    "_freq": 932.3275230361799,
    "_isFlat": false,
    "_isSharp": false,
    "_midi": 82,
    "_next": "B",
    "_note": "Bb",
    "_octave": 5,
    "_prev": "A",
  },
]
`;

exports[`An Octaves Test Suite should map M13 chord 1`] = `
Array [
  Note {
    "_enharmonic": null,
    "_freq": 261.6255653005986,
    "_isFlat": false,
    "_isSharp": false,
    "_midi": 60,
    "_next": "C#",
    "_note": "C",
    "_octave": 4,
    "_prev": "B",
  },
  Note {
    "_enharmonic": null,
    "_freq": 329.6275569128699,
    "_isFlat": false,
    "_isSharp": false,
    "_midi": 64,
    "_next": "F",
    "_note": "E",
    "_octave": 4,
    "_prev": "D#",
  },
  Note {
    "_enharmonic": null,
    "_freq": 391.99543598174927,
    "_isFlat": false,
    "_isSharp": false,
    "_midi": 67,
    "_next": "G#",
    "_note": "G",
    "_octave": 4,
    "_prev": "F#",
  },
  Note {
    "_enharmonic": null,
    "_freq": 493.8833012561241,
    "_isFlat": false,
    "_isSharp": false,
    "_midi": 71,
    "_next": "C",
    "_note": "B",
    "_octave": 4,
    "_prev": "A#",
  },
  Note {
    "_enharmonic": null,
    "_freq": 587.3295358348151,
    "_isFlat": false,
    "_isSharp": false,
    "_midi": 74,
    "_next": "D#",
    "_note": "D",
    "_octave": 5,
    "_prev": "C#",
  },
  Note {
    "_enharmonic": null,
    "_freq": 880,
    "_isFlat": false,
    "_isSharp": false,
    "_midi": 81,
    "_next": "A#",
    "_note": "A",
    "_octave": 5,
    "_prev": "G#",
  },
  Note {
    "_enharmonic": null,
    "_freq": 1046.5022612023945,
    "_isFlat": false,
    "_isSharp": false,
    "_midi": 84,
    "_next": "C#",
    "_note": "C",
    "_octave": 6,
    "_prev": "B",
  },
  Note {
    "_enharmonic": null,
    "_freq": 1318.5102276514797,
    "_isFlat": false,
    "_isSharp": false,
    "_midi": 88,
    "_next": "F",
    "_note": "E",
    "_octave": 6,
    "_prev": "D#",
  },
  Note {
    "_enharmonic": null,
    "_freq": 1567.981743926997,
    "_isFlat": false,
    "_isSharp": false,
    "_midi": 91,
    "_next": "G#",
    "_note": "G",
    "_octave": 6,
    "_prev": "F#",
  },
  Note {
    "_enharmonic": null,
    "_freq": 1975.533205024496,
    "_isFlat": false,
    "_isSharp": false,
    "_midi": 95,
    "_next": "C",
    "_note": "B",
    "_octave": 6,
    "_prev": "A#",
  },
  Note {
    "_enharmonic": null,
    "_freq": 2349.31814333926,
    "_isFlat": false,
    "_isSharp": false,
    "_midi": 98,
    "_next": "D#",
    "_note": "D",
    "_octave": 7,
    "_prev": "C#",
  },
  Note {
    "_enharmonic": null,
    "_freq": 3520,
    "_isFlat": false,
    "_isSharp": false,
    "_midi": 105,
    "_next": "A#",
    "_note": "A",
    "_octave": 7,
    "_prev": "G#",
  },
]
`;
